--- a/src/css/AuthorIcon.css
+++ b/src/css/AuthorIcon.css
@@ -1,37 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Cambay:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .author-icon-container {
-    height: inherit;
-    width: inherit;
+    font-family: Cambay, sans-serif;
+    font-weight: 400;
+    font-style: normal;
 
-    margin-top: 30px;
+    height: 50%;
+    width: auto;
+    padding: 2rem 3rem;
 
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
 }
 
 .author {
-    height: 200px;
-    width: 100px;
+    width: 40%;
 
-    margin-left: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .author img {
+    height: 20rem;
+    width: 16rem;
     border-radius: 50%;
 }
 
 .author p {
-    font-family: Cambay, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
+    font-size: 28px;
+    color: #090909;
+
 }
 
 .about-container {
-    margin-left: 100px;
-    margin-right: 80px;
+    width: 60%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    font-size: 18px;
+    color: #272727;
 }
 
 
