--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -7,20 +7,25 @@
 }
 
 .header-container {
-    height: 100px;
+    height: 7rem;
     width: inherit;
+    padding: 2em 1em;
 
-    margin: 25px 20px 10px 20px;
-    padding-top: 15px ;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
+.header-container img {
+    height: inherit;
+    width: 6em;
+}
+
 #logo {
-    height: 150px;
-    width: 530px;
+    height: inherit;
+    width: inherit;
+    padding-left: 0.2em;
 
     font-family: antic-done, serif;
     font-size: 100px;
@@ -28,14 +33,18 @@
 }
 
 #search-box {
-    height: 40px;
-    width: 750px;
+    height: 40%;
+    width: 40em;
 
     border: solid 3px #DEB86D;
     border-radius: 25px;
 
-    margin-left: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-left: 5em;
+}
+
+#search-box img {
+    height: 3em;
+    width: 3em;
+
+    color: #DEB86D;
 }
